
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_4__ ;
typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_6__ {scalar_t__ rcv_tsecr; } ;
struct tcp_sock {TYPE_2__ rx_opt; } ;
struct sock {int dummy; } ;
struct sk_buff {int dummy; } ;
struct TYPE_8__ {scalar_t__ end_seq; scalar_t__ seq; } ;
struct TYPE_5__ {scalar_t__ rcv_mss; } ;
struct TYPE_7__ {TYPE_1__ icsk_ack; } ;


 TYPE_4__* TCP_SKB_CB (struct sk_buff const*) ;
 TYPE_3__* inet_csk (struct sock*) ;
 int tcp_rcv_rtt_update (struct tcp_sock*,scalar_t__,int ) ;
 struct tcp_sock* tcp_sk (struct sock*) ;
 scalar_t__ tcp_time_stamp ;

__attribute__((used)) static inline void tcp_rcv_rtt_measure_ts(struct sock *sk,
       const struct sk_buff *skb)
{
 struct tcp_sock *tp = tcp_sk(sk);
 if (tp->rx_opt.rcv_tsecr &&
     (TCP_SKB_CB(skb)->end_seq -
      TCP_SKB_CB(skb)->seq >= inet_csk(sk)->icsk_ack.rcv_mss))
  tcp_rcv_rtt_update(tp, tcp_time_stamp - tp->rx_opt.rcv_tsecr, 0);
}
